--- a/styles.css
+++ b/styles.css
@@ -105,14 +105,14 @@ h1 {
 }
 
 .menu-item {
-    padding: 50px;
+    padding-top: 20px;
     background-color: rgba(57, 34, 34, 0.9); /* White background for the card */
     border-radius: 10px;
     border: 2px; /* Border for the card */
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1); /* 3D shadow effect */
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
     height: 350px; /* Fixed height for the card */
-    width: 300px;
+    width: 280px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -120,7 +120,7 @@ h1 {
 
 .image-wrapper {
     width: 100%;
-    height: 200px; /* Fixed height for the image container */
+    height: 350px; /* Fixed height for the image container */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -128,10 +128,10 @@ h1 {
 }
 
 .menu-item img {
-    width: auto;
-    height: 100%;
-    object-fit: contain; /* Ensures the image doesn't get stretched */
-    border-radius: 8px; /* Rounded corners for the image */
+    margin-top: 30px;
+    width: 100%;
+    height: 120%;
+    max-width: 220px;
 }
 
 .menu-h2{
@@ -142,8 +142,15 @@ h1 {
     color: #caba94;
 }
 .menu-item h3 {
+    font-family: "Gantari", sans-serif;
+    font-size: 23px;
     color: #caba94;
     margin-top: 10px;
+}
+
+.menu-item p{
+    font-size: 17px;
+    color: #d9534f;
 }
 
 /* Hover effect for the card */
@@ -199,13 +206,14 @@ h1 {
     margin: 5px 0; /* Add margin for spacing */
     font-size: 25px; /* Adjust font size for product name */
     color: #caba94;
-
+    font-family: "Gantari", sans-serif;
 }
 
 .hero-card .price {
     font-size: 20px; /* Font size for price */
     color: #d9534f; /* Adjust color for price */
     margin-top: 5px; /* Add margin above price */
+    font-family: "Gantari", sans-serif;
 }
 
 /* Product Grid */
@@ -248,13 +256,14 @@ h1 {
     margin: 5px 0; /* Add margin for spacing */
     font-size: 20px; /* Adjust font size for product name */
     color: #caba94;
-
+    font-family: "Gantari", sans-serif;
 }
 
 .product-card .price {
     font-size: 16px; /* Font size for price */
     color: #d9534f; /* Adjust color for price */
     margin-top: 5px; /* Add margin above price */
+    font-family: "Gantari", sans-serif;
 }
 
 
